deploy-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  labels:
    app: demo
spec:
  selector:
    matchLabels:
      app: demo
  replicas: 2
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: app
        image: << pipeline.parameters.dockerhub-username >>/<< pipeline.parameters.dockerhub-repo >>:<< pipeline.parameters.workflow-id:0:7 >>
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
