deploy-kubernetes/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-v2
  labels:
    app: demo-v2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: demo-v2
