deploy-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  labels:
    app: demo
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: demo
